# geidelguerra-website

./: .gitignore  LICENCE  README.md  data.js  generate_cv.js  jsconfig.json  nuxt.config.js  package-lock.json  package.json  postcss.config.js  pyproject.toml  requirements.txt  tailwind.config.js  tailwind.js
.github/workflows/: deploy.yaml  main.yaml
assets/css/: fonts.css
components/: Cubes.vue  PostCard.vue  ShareMenu.vue
content/blog/: laravel-echo-and-inertia copy.md  laravel-echo-and-inertia.md  vapor-and-javascript-injected-environment-variables.md
layouts/: default.vue
lib/: utils.js
pages/: index.vue
pages/blog/: _slug.vue  index.vue
plugins/: analytics.client.js  cubes.client.js
scripts/: deploy.sh  nginx.conf  setup.sh  systemd.service
src/: cli.py  data.json  pdf.py  utils.py  web.py
src/extensions/: markdown.py
src/templates/: game.html  games.html  home.html  layout.html
src/templates/birthdays/: 2025.html
src/templates/layouts/: base.html  game.html  main.html
src/templates/partials/: navmenu.html
src/web/: __init__.py  app.py
static/: manifest.json
static/css/: base.css  bender.css  style.css
static/js/: app.js  bender.js  clock.js  htmx.min.js
static/js/games/: complexity-invaders.js
store/: index.js
